# Context-Transfer

./: .gitignore  AGENTS.md  README.md
.github/release-notes/: v0.1.5.md  v0.1.6.md
.github/workflows/: build.yml  sync-release-notes.yml
frontend/: index-standalone.html  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: ContextPreview.tsx  Header.tsx  MigratePanel.tsx  SessionList.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: claud_extractor.rs  codex_extractor.rs  codex_injector.rs  commands.rs  context_formatter.rs  lib.rs  main.rs
