[package]
name = "context-reset"
version = "0.1.0"
edition = "2021"

[lib]
name = "context_reset_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
