[package]
name = "context-transfer"
version = "0.1.6"
edition = "2021"

[lib]
name = "context_transfer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
arboard = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
